[gd_scene load_steps=8 format=3 uid="uid://ufyrpd0f0sop"]

[ext_resource type="Script" path="res://scenes/enemies/tentacle_slam.gd" id="1_sa13l"]
[ext_resource type="Texture2D" uid="uid://dxgh3who4fwds" path="res://art/Enemies/Concoctopus/ConcoctoSlam.png" id="1_uexkx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_puper"]
radius = 83.0
height = 360.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ocche"]
radius = 17.3199
height = 96.097

[sub_resource type="Animation" id="Animation_tvgln"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_o4sx6"]
resource_name = "slam"
length = 1.66668
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t4sdc"]
_data = {
"RESET": SubResource("Animation_tvgln"),
"slam": SubResource("Animation_o4sx6")
}

[node name="TentacleSlam" type="StaticBody2D"]
scale = Vector2(0.35, 0.35)
collision_layer = 128
collision_mask = 0
script = ExtResource("1_sa13l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_puper")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-350, 150)
rotation = 0.855211
scale = Vector2(10, 10)
shape = SubResource("CapsuleShape2D_ocche")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -370)
texture = ExtResource("1_uexkx")
hframes = 4
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t4sdc")
}

[node name="SlamTimer" type="Timer" parent="."]
wait_time = 0.833
one_shot = true
autostart = true

[node name="SlamEnd" type="Timer" parent="."]
wait_time = 1.167
one_shot = true
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="SlamTimer" to="." method="_on_slam_timer_timeout"]
[connection signal="timeout" from="SlamEnd" to="." method="_on_slam_end_timeout"]
